[Defect][306] Add class names for menu styles.

--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -25,37 +25,37 @@
           <li class="rs-nav-item rs-dropdown rs-utility-dropdown">
             <a class="rs-nav-link" href="#">Link One <i class="rs-caret"></i></a>
             <ul class="rs-dropdown-menu">
-              <li><a href="#">One</a></li>
-              <li><a href="#">Two</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">One</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Two</a></li>
               <li class="rs-divider"></li>
-              <li><a href="#">Three</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
             </ul>
           </li>
           <li class="rs-nav-item rs-dropdown rs-utility-dropdown hover">
             <a class="rs-nav-link" href="#">Link Two <i class="rs-caret"></i></a>
             <ul class="rs-dropdown-menu">
-              <li><a href="#">One</a></li>
-              <li><a href="#">Two</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">One</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Two</a></li>
               <li class="rs-divider"></li>
-              <li><a href="#">Three</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
             </ul>
           </li>
           <li class="rs-nav-item rs-dropdown rs-utility-dropdown active">
             <a class="rs-nav-link" href="#">Link Three <i class="rs-caret"></i></a>
             <ul class="rs-dropdown-menu visible">
-              <li><a href="#">One</a></li>
-              <li><a href="#">Two</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">One</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Two</a></li>
               <li class="rs-divider"></li>
-              <li><a href="#">Three</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
             </ul>
           </li>
           <li class="rs-nav-item rs-dropdown rs-utility-dropdown disabled">
             <a class="rs-nav-link" href="#">Link Four <i class="rs-caret"></i></a>
             <ul class="rs-dropdown-menu">
-              <li><a href="#">One</a></li>
-              <li><a href="#">Two</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">One</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Two</a></li>
               <li class="rs-divider"></li>
-              <li><a href="#">Three</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
             </ul>
           </li>
         </ul>
@@ -70,28 +70,28 @@
           <li class="rs-nav-item rs-dropdown rs-primary-dropdown">
             <a class="rs-nav-link" href="#">Link One <i class="rs-caret"></i></a>
             <ul class="rs-dropdown-menu">
-              <li><a href="#">One</a></li>
-              <li><a href="#">Two</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">One</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Two</a></li>
               <li class="rs-divider"></li>
-              <li><a href="#">Three</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
             </ul>
           </li>
           <li class="rs-nav-item rs-dropdown rs-primary-dropdown hover">
             <a class="rs-nav-link" href="#">Link Two <i class="rs-caret"></i></a>
             <ul class="rs-dropdown-menu">
-              <li><a href="#">One</a></li>
-              <li><a href="#">Two</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">One</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Two</a></li>
               <li class="rs-divider"></li>
-              <li><a href="#">Three</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
             </ul>
           </li>
           <li class="rs-nav-item rs-dropdown rs-primary-dropdown active">
             <a class="rs-nav-link" href="#">Link Three <i class="rs-caret"></i></a>
             <ul class="rs-dropdown-menu visible">
-              <li><a href="#">One</a></li>
-              <li><a href="#">Two</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">One</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Two</a></li>
               <li class="rs-divider"></li>
-              <li><a href="#">Three</a></li>
+              <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
             </ul>
           </li>
           <li class="rs-nav-item rs-dropdown rs-primary-dropdown disabled">
