--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -13,162 +13,162 @@
     <div class="rs-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Action Menu (Hidden)</a>
       <ul class="rs-dropdown-menu">
-        <li><span class="rs-dropdown-category">Links</span></li>
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
-        <li><span class="rs-dropdown-category">More Links</span></li>
-        <li><a href="#">Three</a></li>
-        <li><a href="#">Four</a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">Links</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">One</a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Two</a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">More Links</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Four</a></li>
       </ul>
     </div>
     <div class="rs-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Action Menu (Visible)</a>
       <ul class="rs-dropdown-menu visible">
-        <li><span class="rs-dropdown-category">Links</span></li>
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
-        <li><span class="rs-dropdown-category">More Links</span></li>
-        <li><a href="#">Three</a></li>
-        <li><a href="#">Four</a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">Links</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">One</a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Two</a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">More Links</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Four</a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-utility-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Utility Menu (Hidden)</a>
       <ul class="rs-dropdown-menu">
-        <li><span>Non Link Text</span></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-text">Non Link Text</span></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#" class="hover">Link (Hover)</a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link</a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover)</a></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link External <i class="rs-icon-external-dark"></i></a></li>
-        <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external-dark"></i></a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link External <i class="rs-icon-external-dark"></i></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link External (Hover) <i class="rs-icon-external-dark"></i></a></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
-        <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-utility-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Utility Menu (Visible)</a>
       <ul class="rs-dropdown-menu visible">
-        <li><span>Non Link Text</span></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-text">Non Link Text</span></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#" class="hover">Link (Hover)</a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link</a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover)</a></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link External <i class="rs-icon-external-dark"></i></a></li>
-        <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external-dark"></i></a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link External <i class="rs-icon-external-dark"></i></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link External (Hover) <i class="rs-icon-external-dark"></i></a></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
-        <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-primary-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Primary Menu (Hidden)</a>
       <ul class="rs-dropdown-menu">
-        <li><span class="rs-dropdown-category">Links</span></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#" class="hover">Link (Hover)</a></li>
-        <li><span class="rs-dropdown-category">External</span></li>
-        <li><a href="#">Link External <i class="rs-icon-external"></i></a></li>
-        <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external"></i></a></li>
-        <li><span class="rs-dropdown-category">Captions</span></li>
-        <li><a href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
-        <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">Links</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link</a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover)</a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">External</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link External <i class="rs-icon-external"></i></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link External (Hover) <i class="rs-icon-external"></i></a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">Captions</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-primary-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Primary Menu (Visible)</a>
       <ul class="rs-dropdown-menu visible">
-        <li><span class="rs-dropdown-category">Links</span></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#" class="hover">Link (Hover)</a></li>
-        <li><span class="rs-dropdown-category">External</span></li>
-        <li><a href="#">Link External <i class="rs-icon-external"></i></a></li>
-        <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external"></i></a></li>
-        <li><span class="rs-dropdown-category">Captions can be really long sometimes</span></li>
-        <li><a href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
-        <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">Links</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link</a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover)</a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">External</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link External <i class="rs-icon-external"></i></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link External (Hover) <i class="rs-icon-external"></i></a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">Captions can be really long sometimes</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
     <div style="margin-top: 350px;"></div>
     <div class="rs-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Action Menu (Hidden)</a>
       <ul class="rs-dropdown-menu rs-pull-right">
-        <li><span class="rs-dropdown-category">Links</span></li>
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
-        <li><span class="rs-dropdown-category">More Links</span></li>
-        <li><a href="#">Three</a></li>
-        <li><a href="#">Four</a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">Links</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">One</a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Two</a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">More Links</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Four</a></li>
       </ul>
     </div>
     <div class="rs-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Action Menu (Visible)</a>
       <ul class="rs-dropdown-menu rs-pull-right visible">
-        <li><span class="rs-dropdown-category">Links</span></li>
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
-        <li><span class="rs-dropdown-category">More Links</span></li>
-        <li><a href="#">Three</a></li>
-        <li><a href="#">Four</a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">Links</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">One</a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Two</a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">More Links</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Four</a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-utility-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Utility Menu (Hidden)</a>
       <ul class="rs-dropdown-menu rs-pull-right">
-        <li><span>Non Link Text</span></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-text">Non Link Text</span></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#" class="hover">Link (Hover)</a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link</a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover)</a></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link External <i class="rs-icon-external-dark"></i></a></li>
-        <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external-dark"></i></a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link External <i class="rs-icon-external-dark"></i></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link External (Hover) <i class="rs-icon-external-dark"></i></a></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
-        <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-utility-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Utility Menu (Visible)</a>
       <ul class="rs-dropdown-menu rs-pull-right visible">
-        <li><span>Non Link Text</span></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-text">Non Link Text</span></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#" class="hover">Link (Hover)</a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link</a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover)</a></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link External <i class="rs-icon-external-dark"></i></a></li>
-        <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external-dark"></i></a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link External <i class="rs-icon-external-dark"></i></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link External (Hover) <i class="rs-icon-external-dark"></i></a></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
-        <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-primary-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Primary Menu (Hidden)</a>
       <ul class="rs-dropdown-menu rs-pull-right">
-        <li><span class="rs-dropdown-category">Links</span></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#" class="hover">Link (Hover)</a></li>
-        <li><span class="rs-dropdown-category">External</span></li>
-        <li><a href="#">Link External <i class="rs-icon-external"></i></a></li>
-        <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external"></i></a></li>
-        <li><span class="rs-dropdown-category">Captions</span></li>
-        <li><a href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
-        <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">Links</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link</a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover)</a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">External</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link External <i class="rs-icon-external"></i></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link External (Hover) <i class="rs-icon-external"></i></a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">Captions</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-primary-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Primary Menu (Visible)</a>
       <ul class="rs-dropdown-menu rs-pull-right visible">
-        <li><span class="rs-dropdown-category">Links</span></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#" class="hover">Link (Hover)</a></li>
-        <li><span class="rs-dropdown-category">External</span></li>
-        <li><a href="#">Link External <i class="rs-icon-external"></i></a></li>
-        <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external"></i></a></li>
-        <li><span class="rs-dropdown-category">Captions can be really long sometimes</span></li>
-        <li><a href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
-        <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">Links</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link</a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover)</a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">External</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link External <i class="rs-icon-external"></i></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link External (Hover) <i class="rs-icon-external"></i></a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">Captions can be really long sometimes</span></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
+        <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
     <div style="margin-top: 350px;"></div>
