[Defect][306] Add styles for disabled menu items.

--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -19,6 +19,7 @@
         <li class="rs-dropdown-item"><span class="rs-dropdown-category">More Links</span></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Four</a></li>
+        <li class="rs-dropdown-item disabled"><a class="rs-dropdown-link" href="#">Disabled</a></li>
       </ul>
     </div>
     <div class="rs-dropdown">
@@ -30,6 +31,7 @@
         <li class="rs-dropdown-item"><span class="rs-dropdown-category">More Links</span></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Four</a></li>
+        <li class="rs-dropdown-item disabled"><a class="rs-dropdown-link" href="#">Disabled</a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-utility-dropdown">
@@ -45,6 +47,9 @@
         <li class="rs-divider"></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
         <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-divider"></li>
+        <li class="rs-dropdown-item disabled"><a class="rs-dropdown-link" href="#">Disabled <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item disabled"><a href="#" class="rs-dropdown-link hover">Disabled (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-utility-dropdown">
@@ -60,6 +65,9 @@
         <li class="rs-divider"></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
         <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-divider"></li>
+        <li class="rs-dropdown-item disabled"><a class="rs-dropdown-link" href="#">Disabled <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item disabled"><a href="#" class="rs-dropdown-link hover">Disabled (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-primary-dropdown">
@@ -74,6 +82,9 @@
         <li class="rs-dropdown-item"><span class="rs-dropdown-category">Captions</span></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
         <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item"><span class="rs-dropdown-category">Captions</span></li>
+        <li class="rs-dropdown-item disabled"><a class="rs-dropdown-link" href="#">Disabled <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item disabled"><a href="#" class="rs-dropdown-link hover">Disabled (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-primary-dropdown">
@@ -88,9 +99,11 @@
         <li class="rs-dropdown-item"><span class="rs-dropdown-category">Captions can be really long sometimes</span></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
         <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item disabled"><a class="rs-dropdown-link" href="#">Disabled <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item disabled"><a href="#" class="rs-dropdown-link hover">Disabled (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
-    <div style="margin-top: 350px;"></div>
+    <div style="margin-top: 450px;"></div>
     <div class="rs-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Action Menu (Hidden)</a>
       <ul class="rs-dropdown-menu rs-pull-right">
@@ -100,6 +113,7 @@
         <li class="rs-dropdown-item"><span class="rs-dropdown-category">More Links</span></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Four</a></li>
+        <li class="rs-dropdown-item disabled"><a class="rs-dropdown-link" href="#">Disabled</a></li>
       </ul>
     </div>
     <div class="rs-dropdown">
@@ -111,6 +125,7 @@
         <li class="rs-dropdown-item"><span class="rs-dropdown-category">More Links</span></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Four</a></li>
+        <li class="rs-dropdown-item disabled"><a class="rs-dropdown-link" href="#">Disabled</a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-utility-dropdown">
@@ -126,6 +141,9 @@
         <li class="rs-divider"></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
         <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-divider"></li>
+        <li class="rs-dropdown-item disabled"><a class="rs-dropdown-link" href="#">Disabled <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item disabled"><a href="#" class="rs-dropdown-link hover">Disabled (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-utility-dropdown">
@@ -141,6 +159,9 @@
         <li class="rs-divider"></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
         <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-divider"></li>
+        <li class="rs-dropdown-item disabled"><a class="rs-dropdown-link" href="#">Disabled <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item disabled"><a href="#" class="rs-dropdown-link hover">Disabled (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-primary-dropdown">
@@ -155,6 +176,8 @@
         <li class="rs-dropdown-item"><span class="rs-dropdown-category">Captions</span></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
         <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item disabled"><a class="rs-dropdown-link" href="#">Disabled <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item disabled"><a href="#" class="rs-dropdown-link hover">Disabled (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
     <div class="rs-dropdown rs-primary-dropdown">
@@ -169,9 +192,11 @@
         <li class="rs-dropdown-item"><span class="rs-dropdown-category">Captions can be really long sometimes</span></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
         <li class="rs-dropdown-item"><a href="#" class="rs-dropdown-link hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item disabled"><a class="rs-dropdown-link" href="#">Disabled <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li class="rs-dropdown-item disabled"><a href="#" class="rs-dropdown-link hover">Disabled (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
-    <div style="margin-top: 350px;"></div>
+    <div style="margin-top: 450px;"></div>
   </div>
 </body>
 </html>
