--- a/examples/screenshots/status.html
+++ b/examples/screenshots/status.html
@@ -17,7 +17,7 @@
       <span class="rs-status rs-status-error">Error</span>
       <span class="rs-status rs-status-disabled">Disabled</span>
       <span class="rs-status rs-status-processing">Processing</span>
-      <span class="rs-status rs-status-ok-processing">OK Processing</span>
+      <span class="rs-status rs-status-processing-ok">Processing OK</span>
     </p>
     <!-- Status Text -->
     <p>
@@ -26,7 +26,7 @@
       <span class="rs-status-error">Error</span>
       <span class="rs-status-disabled">Disabled</span>
       <span class="rs-status-processing">Processing</span>
-      <span class="rs-status-ok-processing">OK Processing</span>
+      <span class="rs-status-processing-ok">Processing OK</span>
     </p>
   </body>
 </html>
